# example-dia-text-to-speech

./: README.md
backend/: Dockerfile  main.py  pyproject.toml
